@@ -55,7 +55,7 @@
  *    oflag        (r) link and create flag
  *    attruname    (r) name of attribute
  *
- * Returns: AFP code: AFP_OK on success or appropiate AFP error code
+ * Returns: AFP code: AFP_OK on success or appropriate AFP error code
  *
  * Effects:
  *
@@ -148,7 +148,7 @@ int sys_get_easize(VFS_FUNC_ARGS_EA_GETSIZE)
  *    attruname    (r) name of attribute
  *    maxreply     (r) maximum EA size as of current specs/real-life
  *    fd           (r) file descriptor
- * Returns: AFP code: AFP_OK on success or appropiate AFP error code
+ * Returns: AFP code: AFP_OK on success or appropriate AFP error code
  *
  * Effects:
  *
@@ -265,7 +265,7 @@ int sys_get_eacontent(VFS_FUNC_ARGS_EA_GETCONTENT)
  *    uname        (r) filename
  *    oflag        (r) link and create flag
  *
- * Returns: AFP code: AFP_OK on success or appropiate AFP error code
+ * Returns: AFP code: AFP_OK on success or appropriate AFP error code
  *
  * Effects:
  *
@@ -307,7 +307,7 @@ int sys_list_eas(VFS_FUNC_ARGS_EA_LIST)
             ret = AFP_OK;
             goto exit;
         default:
-            LOG(log_debug, logtype_afpd, "sys_list_extattr(%s): error opening atttribute dir: %s", uname, strerror(errno));
+            LOG(log_debug, logtype_afpd, "sys_list_extattr(%s): error opening attribute dir: %s", uname, strerror(errno));
             ret = AFPERR_MISC;
             goto exit;
     }
@@ -360,7 +360,7 @@ exit:
  *    attrsize     (r) length EA in ibuf
  *    oflag        (r) link and create flag
  *
- * Returns: AFP code: AFP_OK on success or appropiate AFP error code
+ * Returns: AFP code: AFP_OK on success or appropriate AFP error code
  *
  * Effects:
  *
@@ -459,7 +459,7 @@ int sys_set_ea(VFS_FUNC_ARGS_EA_SET)
  *    oflag        (r) link and create flag
  *    fd           (r) file descriptor
  *
- * Returns: AFP code: AFP_OK on success or appropiate AFP error code
+ * Returns: AFP code: AFP_OK on success or appropriate AFP error code
  *
  * Effects:
  *
